style.css
* {
  font-family: 'Roboto', 'Helvetica Neue', Helvetica, sans-serif;
  font-weight: 300;
}

body {
  padding-top: 50px;
}

a {

}

a:hover {

}

a:active {

}

small {
  font-weight: 300;
  color: #999;
}

.container {
  width: 80%; 
  margin: 0px auto;
}

.sidebar {
  margin-top: 30px;
  padding: 5px 20px;
  background-color: #efefec;
}

header {
  width: 100%;
  position: absolute;
  color: #fff;
  font-weight: 100;
}

header nav.navbar-inverse {
  background-color: #212120;
  border-color: #000000;
  -webkit-box-shadow: inset 0px -5px 25px 0px rgba(11, 11, 11, 0.1),
                      0px 1px 3px 0px rgba(0, 0, 0, 0.3);
  box-shadow: inset 0px -5px 25px 0px rgba(11, 11, 11, 0.1),
              0px 1px 3px 0px rgba(0, 0, 0, 0.3);
}

header nav.navbar-inverse ul.dropdown-menu {
  color: #fff;
  background-color: #080808;
}

header nav.navbar-inverse ul.dropdown-menu>li>a {
  color: #efefef;
  font-weight: 300;
  padding: 8px 20px;
}

header nav.navbar-inverse ul.dropdown-menu>li>a:hover {
  background-color: #333;
  color: #fff;
}

header #mc_embed_signup {
  display: none;
  margin-top: 20px;
}

header h3 {
  font-weight: 100;
  letter-spacing: 1px;
  font-size: 1.8em;
}

header h3 {
  font-size: 1em;
}

header h4 {
  font-size: 0.9em;
}

@media (min-width: 400px){
  header h3 {
    font-size: 1.2em;
  }

  header h4 {
    font-size: 1.1em;
  }
}

@media (min-width: 450px){
  .header-message {
    width: 55%;
  }
}

@media (min-width: 600px){
  header #mc_embed_signup {
    display: block;
  }
}

@media (min-width: 700px){
  header h3 {
    font-size: 1.3em;
  }

  header h4 {
    font-size: 1em;
  }
}

@media (min-width: 900px){
  header h3 {
    font-size: 1.5em;
    margin-top: 50px;
  }
  header h4 {
    font-size: 1.2em;
  }
}

@media (min-width: 1100px){
  header h3 {
    font-size: 1.6em;
    margin-top: 75px;
  }
  header h4 {
    font-size: 1.3em;
  }
}


.banner {
  background-image: url('img/skyline.jpg');
  background-size: 100%;
  background-repeat: no-repeat;
  width: 100%;
  padding-bottom: 49%;
  -webkit-box-shadow: 0px 1px 5px 0px rgba(200, 200, 200, 0.8);
  box-shadow: 0px 1px 5px 0px rgba(200, 200, 200, 0.8);
}

#game-ui {
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: -moz-none;
  -ms-user-select: none;
  user-select: none;
}

.ui {
  margin: 10px 20px 5px 0px;
  float: left;
}

.ui .label {
  display: inline-block;
  text-transform: uppercase;
  font-size: 0.9em;
  font-weight: 300;
  color: #cececa;
}

.ui .value {
  font-size: 0.9em;
  color: #6e6e6a;
}

.directions {
  float: right;
  margin-top: 10px;
}

#log {
  padding: 0px;
  margin: 20px auto;
  overflow: auto;
  height: 20px;
  text-align: center;
}

h2#game-title {
  text-align: center;
  float: none;
  clear: both;
  width: 100%;
  font-size: 20px;
}


.welcome {
  width: 80%;
  background: rgba(0, 0, 0, 0.8);
  padding: 40px 40px 20px 40px;
  margin: 0px auto;
  color: #fff;
}

.welcome h2 {
  margin-top: 0px;
  font-weight: 100;
  text-align: center;
  font-size: 20px;
}

.description {
  padding: 50px 0px 20px 0px;
  text-align: center;
}

.description p {
  font-size: 1.3em;
  font-weight: 100;
}

.description p.message {
  color: #969693;
  font-size: 1em;
}

#pre-order {
  margin: 50px 0px;
  background-color: #efefec;
  padding: 30px;
}

#pre-order h1 {
  border: none;
  line-height: 1.5;
  font-size: 25px;
}

.accent-color {
  color: #FF46AF;
}

.center {
  text-align: center;
}

.newsletter {
  text-align: center;
  padding-top: 20px;
}

.newsletter h2 {
  font-weight: 100;
  margin-bottom: 30px;
}

.mc-field-group label {
  font-weight: 300;
}

input.email {
  border: 1px solid #ccc;
  border-radius: 2px;
  display: inline-block;
  outline: none;
  width: 150px;
  padding: 8px;
  vertical-align: top;
  margin-bottom: 15px;
  font-weight: 300;
}

input.btn {
  background-color: #A4CD2C;
  color: #fefefa;
  border-radius: 2px;
  height: 38px;
}

input.btn:hover,
input.btn:focus {
  background-color: #454545;
  color: #fff;
}

section h1 {
  font-weight: 100;
  text-align: center;
  padding-bottom: 15px;
  border-bottom: 1px solid #efefec;
  margin-bottom: 25px;
}

#recent-posts {
  text-align: center;
}

#recent-posts .posts a {
  color: #757572;
  text-decoration: none;
}

#recent-posts .posts a:hover {
  color: #353532;
  text-decoration: none;
}

p.post-date {
  margin-bottom: 20px;
  font-size: 0.8em;
  text-transform: uppercase;
  text-align: left;
}

h3.post-title {
  font-weight: 300;
  margin-top: 10px;
  padding-bottom: 30px;
  border-bottom: 1px solid #efefe2;
  margin-bottom: 30px;
  text-align: left;
}

a.readmore {
  background-color: #CC2C45;
  padding: 10px 20px;
  font-size: 18px;
  color: #fff;
  font-weight: 100;
  display: inline-block;
  margin: 15px auto;
}

a.readmore:hover {
  background-color: #454545;
  color: #fff;
}

.sidebar h5 {
  text-align: center;
  margin-top: 30px;
  padding-bottom: 7px;
  border-bottom: 1px solid #fff;
  margin-bottom: 10px;
}

#interwebs {
  margin-bottom: 50px;
}

#interwebs h5 {
  text-align: center;
  font-weight: 100;
  font-size: 35px;
  text-transform: lowercase;
  color: #A4CD2C;
  margin-bottom: 20px;
}

#interwebs ul,
ul#like {
  text-align: center;
  padding: 0;
  margin: 0;
  font-weight: 100;
}

#interwebs li,
#like li {
  display: inline-block;
}

#interwebs #find li {
  margin-bottom: 3px;
  width: 100%;
  display: block;
}

#interwebs #find li a {
  background-color: #CC2C45;
  padding: 10px 20px;
  font-size: 30px;
  color: #fff;
  font-weight: 100;
  display: block;
}

#interwebs #find li a:hover {
  background-color: #454545;
}

ul#like {
  padding-top: 20px;
}

ul#like li {
  width: 80px;
  vertical-align: middle;
}

#interwebs ul#follow {
  margin-top: 10px;
}

#interwebs ul#follow li {
  width: 120px;
  vertical-align: middle;
}

#post {
  padding-top: 30px;
}

#post h2 {
  font-weight: 300;
}

#post .post-content p {
  font-size: 16px;
  margin-bottom: 20px;
}

#post img {
  max-width: 100%;
  height: auto;
}

#team {
  margin-top: 80px;
}

ul#team-members {
  text-align: center;
  margin: 0px;
  padding: 0px;
}

li.team-member {
  display: inline-block;
  text-align: left;
  width: 200px;
  margin: 30px;
  vertical-align: top;
}

li.team-member img {
  width: 200px;
  height: 200px;
  display: block;

}

footer {
  margin-top: 30px;
  border-top: 1px solid #efefec;
  padding: 20px 0px;
}

footer ul {
  text-align: center;
  padding: 0px;
  margin: 0px;
}

footer ul li {
  display: inline-block;
  padding: 10px;
}

@media only screen and (min-width: 500px) {
  .banner {
  }

  .welcome h2 {
    font-size: 30px;
  }

  .description p {
    font-size: 1.8em;
  }

  .description p.message {
    font-size: 1.4em;
  }

  #pre-order h1 {
    font-size: 35px;
  }

  #interwebs ul#like li {
    width: 90px;
  }

  #interwebs #find li {
    width: auto;
    display: inline-block;
  }
}

